# perfect-dex-reports

./: .env.example  .gitignore  BACKEND-MOCK-MODE.md  BUG-BASH-CHECKLIST.md  CI-CD.md  COPY_ABIS.sh  CRITICAL-PATHS.md  DOCKER.md  FRONTEND-LAUNCH.md  INCIDENT-RESPONSE-PLAN.md  PROJECT-GAP-ANALYSIS.md  QUICK-START-BASE-SEPOLIA.md  README.md  RUN-TESTS.md  SECURITY-CHECKLIST.md  SECURITY-LAUNCH-READY.md  SECURITY-QUICK-REFERENCE.md  SECURITY.md  TEST-SETUP-GUIDE.md  claude.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  INTEGRATION_CHECKLIST.md  MOCK-MODE.md  README.md  START-MOCK.sh  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
contracts/: .cleanup-done  .env.example  .gitignore  AUDIT_PACKAGE.md  BASESCAN_VERIFY_GUIDE.md  FUZZ_TEST_FIXES.md  HOOK_REGISTRATION_COMPLETE.md  KNOWN_ISSUES.md  README.md  SECURITY-REVIEW-QA.md  SECURITY-VERIFICATION.md  SECURITY_ADDENDUM.md  SECURITY_FIXES_REQUIRED.md  deploy-hooks.sh  foundry-deploy.toml  foundry.toml
frontend/: .dockerignore  .env.example  ABI-UPDATE-INSTRUCTIONS.md  ABI_SETUP_INSTRUCTIONS.md  Dockerfile  E2E_TEST_PLAN.md  FRONTEND-STATUS.md  (+8 more)
router/: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_VERIFICATION.md  INTEGRATION_CHECK.md  MIGRATION-ETHERS-TO-ALLOY.md  README.md  TROUBLESHOOTING.md
router/old-reports/: COMPLETION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  PERFORMANCE_REPORT.md  RUST_TASKS_COMPLETE.md
router/routing-engine/: .env.example  Cargo.toml
router/routing-engine/benches/: memory_profile.rs  routing_benchmark.rs
router/routing-engine/src/: lib.rs  main.rs
router/routing-engine/src/api/: dto.rs  handlers.rs  routes.rs  state.rs
router/routing-engine/src/cache/: enhanced_route_cache.rs  lru_cache.rs  mod.rs  route_cache.rs
router/routing-engine/src/config/: contracts.rs  mod.rs  settings.rs
router/routing-engine/src/graph/: edge.rs  mod.rs  node.rs  pool_graph.rs
router/routing-engine/src/routing/: mod.rs  multi_hop.rs  parallel.rs  pathfinder.rs  quote.rs  route.rs  router.rs  single_hop.rs  split.rs
router/routing-engine/src/simulation/: mod.rs  swap.rs
router/routing-engine/src/sync/: mod.rs  pool_sync.rs
router/routing-engine/src/utils/: error.rs  math.rs  mod.rs  types.rs
router/routing-engine/tests/: api_test.rs  integration_test.rs  multi_hop_split_test.rs
(+425 files in other folders)
