[workspace]
members = ["routing-engine"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BaseBook Team"]
license = "MIT"
repository = "https://github.com/basebook/dex"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph algorithms
petgraph = "0.6"

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Blockchain primitives (Address, U256, etc.)
alloy-primitives = { version = "1", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Performance
rayon = "1.8"

# Testing
criterion = "0.5"
