[package]
name = "routing-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "routing-engine"
path = "src/main.rs"

[lib]
name = "routing_engine"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Graph algorithms
petgraph = { workspace = true }

# Concurrent data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Blockchain primitives (Address, U256, etc.)
alloy-primitives = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }

# Performance
rayon = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "routing_benchmark"
harness = false
